ref to lonking ATE to biogeo events

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1521,3 +1521,63 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	keywords = {ancient admixture, human evolution, Neanderthals},
 	pages = {199--209}
 }
+
+
+@article{douka_age_2019,
+	title = {Age estimates for hominin fossils and the onset of the {Upper} {Palaeolithic} at {Denisova} {Cave}},
+	volume = {565},
+	copyright = {2019 Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-018-0870-z},
+	doi = {10.1038/s41586-018-0870-z},
+	abstract = {Denisova Cave in the Siberian Altai (Russia) is a key site for understanding the complex relationships between hominin groups that inhabited Eurasia in the Middle and Late Pleistocene epoch. DNA sequenced from human remains found at this site has revealed the presence of a hitherto unknown hominin group, the Denisovans1,2, and high-coverage genomes from both Neanderthal and Denisovan fossils provide evidence for admixture between these two populations3. Determining the age of these fossils is important if we are to understand the nature of hominin interaction, and aspects of their cultural and subsistence adaptations. Here we present 50 radiocarbon determinations from the late Middle and Upper Palaeolithic layers of the site. We also report three direct dates for hominin fragments and obtain a mitochondrial DNA sequence for one of them. We apply a Bayesian age modelling approach that combines chronometric (radiocarbon, uranium series and optical ages), stratigraphic and genetic data to calculate probabilistically the age of the human fossils at the site. Our modelled estimate for the age of the oldest Denisovan fossil suggests that this group was present at the site as early as 195,000 years ago (at 95.4\% probability). All Neanderthal fossils—as well as Denisova 11, the daughter of a Neanderthal and a Denisovan4—date to between 80,000 and 140,000 years ago. The youngest Denisovan dates to 52,000–76,000 years ago. Direct radiocarbon dating of Upper Palaeolithic tooth pendants and bone points yielded the earliest evidence for the production of these artefacts in northern Eurasia, between 43,000 and 49,000 calibrated years before present (taken as ad 1950). On the basis of current archaeological evidence, it may be assumed that these artefacts are associated with the Denisovan population. It is not currently possible to determine whether anatomically modern humans were involved in their production, as modern-human fossil and genetic evidence of such antiquity has not yet been identified in the Altai region.},
+	language = {en},
+	number = {7741},
+	urldate = {2020-07-01},
+	journal = {Nature},
+	author = {Douka, Katerina and Slon, Viviane and Jacobs, Zenobia and Ramsey, Christopher Bronk and Shunkov, Michael V. and Derevianko, Anatoly P. and Mafessoni, Fabrizio and Kozlikin, Maxim B. and Li, Bo and Grün, Rainer and Comeskey, Daniel and Devièse, Thibaut and Brown, Samantha and Viola, Bence and Kinsley, Leslie and Buckley, Michael and Meyer, Matthias and Roberts, Richard G. and Pääbo, Svante and Kelso, Janet and Higham, Tom},
+	month = jan,
+	year = {2019},
+	pages = {640--644},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/QV9LRHEG/Douka et al. - 2019 - Age estimates for hominin fossils and the onset of.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/2BSRUJK5/s41586-018-0870-z.html:text/html}
+}
+
+
+@article{vyas_analyses_2019,
+	title = {Analyses of {Neanderthal} introgression suggest that {Levantine} and southern {Arabian} populations have a shared population history},
+	volume = {169},
+	copyright = {© 2019 Wiley Periodicals, Inc.},
+	issn = {1096-8644},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ajpa.23818},
+	doi = {10.1002/ajpa.23818},
+	abstract = {Objectives Modern humans are thought to have interbred with Neanderthals in the Near East soon after modern humans dispersed out of Africa. This introgression event likely took place in either the Levant or southern Arabia depending on the dispersal route out of Africa that was followed. In this study, we compare Neanderthal introgression in contemporary Levantine and southern Arabian populations to investigate Neanderthal introgression and to study Near Eastern population history. Materials and Methods We analyzed genotyping data on {\textgreater}400,000 autosomal SNPs from seven Levantine and five southern Arabian populations and compared these data to those from populations from around the world including Neanderthal and Denisovan genomes. We used f4 and D statistics to estimate and compare levels of Neanderthal introgression between Levantine, southern Arabian, and comparative global populations. We also identified 1,581 putative Neanderthal-introgressed SNPs within our dataset and analyzed their allele frequencies as a means to compare introgression patterns in Levantine and southern Arabian genomes. Results We find that Levantine and southern Arabian populations have similar levels of Neanderthal introgression to each other but lower levels than other non-Africans. Furthermore, we find that introgressed SNPs have very similar allele frequencies in the Levant and southern Arabia, which indicates that Neanderthal introgression is similarly distributed in Levantine and southern Arabian genomes. Discussion We infer that the ancestors of contemporary Levantine and southern Arabian populations received Neanderthal introgression prior to separating from each other and that there has been extensive gene flow between these populations.},
+	language = {en},
+	number = {2},
+	urldate = {2020-07-01},
+	journal = {American Journal of Physical Anthropology},
+	author = {Vyas, Deven N. and Mulligan, Connie J.},
+	year = {2019},
+	keywords = {archaic humans, dispersal, Neanderthal introgression, Near East, out of Africa, Yemen},
+	pages = {227--239},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/X2B7985E/Vyas and Mulligan - 2019 - Analyses of Neanderthal introgression suggest that.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/T8YGL2RZ/ajpa.html:text/html}
+}
+
+
+@article{lazaridis_genomic_2016,
+	title = {Genomic insights into the origin of farming in the ancient {Near} {East}},
+	volume = {536},
+	copyright = {2016 Macmillan Publishers Limited, part of Springer Nature. All rights reserved.},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature19310},
+	doi = {10.1038/nature19310},
+	abstract = {We report genome-wide ancient DNA from 44 ancient Near Easterners ranging in time between {\textasciitilde}12,000 and 1,400 bc, from Natufian hunter–gatherers to Bronze Age farmers. We show that the earliest populations of the Near East derived around half their ancestry from a ‘Basal Eurasian’ lineage that had little if any Neanderthal admixture and that separated from other non-African lineages before their separation from each other. The first farmers of the southern Levant (Israel and Jordan) and Zagros Mountains (Iran) were strongly genetically differentiated, and each descended from local hunter–gatherers. By the time of the Bronze Age, these two populations and Anatolian-related farmers had mixed with each other and with the hunter–gatherers of Europe to greatly reduce genetic differentiation. The impact of the Near Eastern farmers extended beyond the Near East: farmers related to those of Anatolia spread westward into Europe; farmers related to those of the Levant spread southward into East Africa; farmers related to those of Iran spread northward into the Eurasian steppe; and people related to both the early farmers of Iran and to the pastoralists of the Eurasian steppe spread eastward into South Asia.},
+	language = {en},
+	number = {7617},
+	urldate = {2020-07-01},
+	journal = {Nature},
+	author = {Lazaridis, Iosif and Nadel, Dani and Rollefson, Gary and Merrett, Deborah C. and Rohland, Nadin and Mallick, Swapan and Fernandes, Daniel and Novak, Mario and Gamarra, Beatriz and Sirak, Kendra and Connell, Sarah and Stewardson, Kristin and Harney, Eadaoin and Fu, Qiaomei and Gonzalez-Fortes, Gloria and Jones, Eppie R. and Roodenberg, Songül Alpaslan and Lengyel, György and Bocquentin, Fanny and Gasparian, Boris and Monge, Janet M. and Gregg, Michael and Eshed, Vered and Mizrahi, Ahuva-Sivan and Meiklejohn, Christopher and Gerritsen, Fokke and Bejenaru, Luminita and Blüher, Matthias and Campbell, Archie and Cavalleri, Gianpiero and Comas, David and Froguel, Philippe and Gilbert, Edmund and Kerr, Shona M. and Kovacs, Peter and Krause, Johannes and McGettigan, Darren and Merrigan, Michael and Merriwether, D. Andrew and O'Reilly, Seamus and Richards, Martin B. and Semino, Ornella and Shamoon-Pour, Michel and Stefanescu, Gheorghe and Stumvoll, Michael and Tönjes, Anke and Torroni, Antonio and Wilson, James F. and Yengo, Loic and Hovhannisyan, Nelli A. and Patterson, Nick and Pinhasi, Ron and Reich, David},
+	month = aug,
+	year = {2016},
+	pages = {419--424},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/YGUBCLW7/Lazaridis et al. - 2016 - Genomic insights into the origin of farming in the.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7LV2HC93/nature19310.html:text/html}
+}
