--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -197,6 +197,9 @@ suppressPackageStartupMessages({
   library(kableExtra)
   library(DEoptim)
   library(png)
+  library("MASS")
+  library(bbmle)
+  library(DPQ)
 })
 
 Results_Table <- function(Table_Path) {
@@ -216,11 +219,21 @@ Results_Table <- function(Table_Path) {
 cbPalette <- c( "#56B4E9", "#E69F00", "#009E73", "#F0E442", "#0072B2", "#D55E00")
 cbPalette_viridis <- viridis(6,option = "D")
 
-Get_Data_Table <- function(Data){
+Get_Data_Table <- function(Data,mean_Gamma=F){
   xx=as.data.frame(table(round(Data$m,digits = 0), paste(Data$GF,Data$mean.t.GF, sep="_"),Data$mean.t.GF,Data$GF,Data$mean.t.GF,Data$length.t.GF))
   xx=subset(xx,Freq>0)
   xx=xx[order(xx$Var3),]
   return(xx)
+}
+
+Get_gamma_mean <- function(start_GF,stop_GF){
+    EX= (stop_GF - start_GF)/2 + start_GF
+    VarX= ((stop_GF - start_GF)/4)**2
+    b= EX/VarX
+    a=EX*b
+    a=a+1
+    mean_gamma= a/b
+    return(round(mean_gamma))
 }
 
 Get_points <- function(input,lval,hval,log){
@@ -312,7 +325,7 @@ Figure_1_C_2 <- function(Timespan_GF_Models,time_l,Split_time,Mean_Time,Colour_P
     b= EX/VarX
     a=EX*b
     
-    GF_gamma <- dgamma(x=time,shape = a+1,scale = 1/b)
+    GF_gamma <- dgamma(x=time,shape = a,scale = 1/b)
     GF_gamma[GF_gamma < 1e-6] = 0
     GF_gamma <- GF_gamma[1:Split_time]
     m2 <- c()
@@ -356,7 +369,7 @@ Theoratical_Lomax <- function(Timespan_GF_Models,max_Genetic_distance,Split_time
     b= EX/VarX
     a=EX*b
     Theta=b
-    k=a
+    k=a+1
     Lomax_normal <- function(dist,k,theta,A) A*(1 + ((dist/100) /  theta))^-(k)
     Lomax_log <- function(dist,k,theta,A) -k* log(1 + ((dist/100) /  theta)) + log(A)
     if(log==T){
@@ -760,39 +773,15 @@ from a continuous event (resulting in Lomax-distributed ALD).
 
 
 
-
-```{r eval=FALSE,message=FALSE, echo=FALSE,warning=FALSE}
-
-#{r fig1,message=FALSE, echo=FALSE,warning=FALSE,fig1.pos="H",fig.width=9,fig.height=3,fig.cap="\\label{fig:fig1} A) Migration rate per #generation modeled using a Gamma distribution for different gene flow length, dotted line indicates maximum time of gene flow. B) The #expected LD decay modeled as a Lomax distribution for the different length. C) The observed LD decay from msprime simulations" }
-
-## Visualization of gamma theoretical lomax LD and real data LD
-ALL_Continuous_Data <- c('Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_11_-run0-GF_Model_IV-ascertainment-0.txt',
-                         'Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_12_-run0-GF_Model_IV-ascertainment-0.txt',
-                         'Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_13_-run0-GF_Model_IV-ascertainment-0.txt',
-                         'Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_14_-run0-GF_Model_IV-ascertainment-0.txt',
-                         'Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_15_-run0-GF_Model_IV-ascertainment-0.txt',
-                         'Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_16_-run0-GF_Model_IV-ascertainment-0.txt')
-
-P_Gamma <- Figure_1_C_2(c(1,200,400,800,1000,1500),3000,2550,1500,Colour_P = cbPalette_viridis)
-
-P_Lomax <-Theoratical_Lomax(c(1,200,400,800,1000,1500),0.5,2550,1500,0.0004,Colour_P = cbPalette_viridis)
-
-P_real <- Figure_All_Real_Data(ALL_Continuous_Data,log=T,c(1,200,400,800,1000,1500),Colour_P = cbPalette_viridis)
-
-ggarrange(P_Gamma,P_Lomax,P_real,
-          labels = c("A","B", "C"),
-          ncol = 3, nrow = 1,common.legend = T,legend = 'bottom')
-
-```
-
-
 \subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
 
 
 ```{r message=FALSE, echo=FALSE,warning=FALSE}
+
 #Data
 Figure_1_A_Data <- Results_Table("Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_1_A_new-GF_Model_I-min_dist_Fit-0.05-ascertainment-0.txt")
-Figure_1_A_Data <- Figure_1_A_Data[Figure_1_A_Data$error=="no_error",] 
+Figure_1_A_Data <- Figure_1_A_Data[Figure_1_A_Data$error=="no_error",]
+Figure_1_A_Data$Gamma_Mean <- Get_gamma_mean(Figure_1_A_Data$GF_Start,Figure_1_A_Data$GF_Stop)
 Figure_1_B_Data <- Results_Table("Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_1_B-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 Figure_1_C_1_Data <- c('Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_11_-run0-GF_Model_IV-ascertainment-0.txt','Results_Fig_1_2/Differnt_GF_length_Data/Raw_ALDER_output-_Scenario_16_-run0-GF_Model_IV-ascertainment-0.txt')
 
@@ -884,41 +873,49 @@ ggarrange(P1_1,P1_2,
 ### Read in data ###
 
 Simple_D_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_A-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
+Simple_D_Sim_1$Gamma_mean <- Get_gamma_mean(Simple_D_Sim_1$GF_Start,Simple_D_Sim_1$GF_Stop)
 Simple_D_Sim_1$Demography <- "0_Simple"
 Simple_D_Sim_1$Recomb.rate <- "0_constant"
 Simple_D_Sim_1$Sim_id <- ifelse(Simple_D_Sim_1$Ascertained==0,"Simple_D_Sim_LES_0","Simple_D_Sim_HES_0")
 Simple_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_A-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Simple_D_Sim_2$Gamma_mean <- Get_gamma_mean(Simple_D_Sim_2$GF_Start,Simple_D_Sim_2$GF_Stop)
 Simple_D_Sim_2$Demography <- "0_Simple"
 Simple_D_Sim_2$Recomb.rate <- "0_constant"
 Simple_D_Sim_2$Sim_id <- ifelse(Simple_D_Sim_2$Ascertained==0,"Simple_D_Sim_LES_1","Simple_D_Sim_HES_1")
 Inferred_D_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B_complex-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
 #Inferred_D_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
+Inferred_D_Sim_1$Gamma_mean <- Get_gamma_mean(Inferred_D_Sim_1$GF_Start,Inferred_D_Sim_1$GF_Stop)
 Inferred_D_Sim_1$Demography <- "Inferred"
 Inferred_D_Sim_1$Recomb.rate <- "0_constant"
 Inferred_D_Sim_1$Sim_id <- ifelse(Inferred_D_Sim_1$Ascertained==0,"Inferred_D_Sim_LES_0","Inferred_D_Sim_HES_0")
 Inferred_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B_complex-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 #Inferred_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Inferred_D_Sim_2$Gamma_mean <- Get_gamma_mean(Inferred_D_Sim_2$GF_Start,Inferred_D_Sim_2$GF_Stop)
 Inferred_D_Sim_2$Demography <- "Inferred"
 Inferred_D_Sim_2$Recomb.rate <- "0_constant"
 Inferred_D_Sim_2$Sim_id <- ifelse(Inferred_D_Sim_2$Ascertained==0,"Inferred_D_Sim_LES_1","Inferred_D_Sim_HES_1")
 Recom_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_C-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
+Recom_Sim_1$Gamma_mean <- Get_gamma_mean(Recom_Sim_1$GF_Start,Recom_Sim_1$GF_Stop)
 Recom_Sim_1$Demography <- "0_Simple"
 Recom_Sim_1$Recomb.rate <- "variable"
 Recom_Sim_1$m <- Recom_Sim_1$m
 Recom_Sim_1$Sim_id <- ifelse(Recom_Sim_1$Ascertained==0,"Recom_D_Sim_LES_0","Recom_D_Sim_HES_0")
 Recom_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_C-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Recom_Sim_2$Gamma_mean <- Get_gamma_mean(Recom_Sim_2$GF_Start,Recom_Sim_2$GF_Stop)
 Recom_Sim_2$Demography <- "0_Simple"
 Recom_Sim_2$Recomb.rate <- "variable"
 Recom_Sim_2$m <- Recom_Sim_2$m
 Recom_Sim_2$Sim_id <- ifelse(Recom_Sim_2$Ascertained==0,"Recom_D_Sim_LES_1","Recom_D_Sim_HES_1")
 Recom_Sim_and_Inf_1 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D_Complex_recomb_map_-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
 #Recom_Sim_and_Inf_1 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
+Recom_Sim_and_Inf_1$Gamma_mean <- Get_gamma_mean(Recom_Sim_and_Inf_1$GF_Start,Recom_Sim_and_Inf_1$GF_Stop)
 Recom_Sim_and_Inf_1$Demography <- "Inferred"
 Recom_Sim_and_Inf_1$Recomb.rate <- "variable"
 Recom_Sim_and_Inf_1$m <- Recom_Sim_and_Inf_1$m
 Recom_Sim_and_Inf_1$Sim_id <- ifelse(Recom_Sim_and_Inf_1$Ascertained==0,"Recom_Sim_and_Inf_LES_0","Recom_Sim_and_Inf_HES_0")
 Recom_Sim_and_Inf_2 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D_Complex_recomb_map_-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 #Recom_Sim_and_Inf_2 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Recom_Sim_and_Inf_2$Gamma_mean <- Get_gamma_mean(Recom_Sim_and_Inf_2$GF_Start,Recom_Sim_and_Inf_2$GF_Stop)
 Recom_Sim_and_Inf_2$Demography <- "Inferred"
 Recom_Sim_and_Inf_2$Recomb.rate <- "variable"
 Recom_Sim_and_Inf_2$m <- Recom_Sim_and_Inf_2$m
@@ -934,12 +931,14 @@ rm(Simple_D_Sim_1,Simple_D_Sim_2,Recom_Sim_1,Recom_Sim_2,Inferred_D_Sim_1,Inferr
 xdata.M.3$TID <- ifelse(xdata.M.3$GF=='0_Pulse',paste(xdata.M.3$Sim_id,'P',sep = '_'),paste(xdata.M.3$Sim_id,'C',sep = '_')) 
 
 
-xdata.M.3$Diff <- xdata.M.3$m - xdata.M.3$mean.t.GF
+#xdata.M.3$Diff <- xdata.M.3$m - xdata.M.3$mean.t.GF
+xdata.M.3$Diff <- xdata.M.3$m - xdata.M.3$Gamma_mean
 # remove all estimates where nls reported an error
 xdata.M.3_no_error <- xdata.M.3[xdata.M.3$error=="no_error",]
 xdata.M.3_no_error$Sim_id_int <- as.integer(as.factor(xdata.M.3_no_error$TID))
 
-xdata.M.3_no_error$Diff_s <- (xdata.M.3_no_error$m - xdata.M.3_no_error$mean.t.GF)/sd(xdata.M.3_no_error$m)
+xdata.M.3_no_error$Diff_s <- (xdata.M.3_no_error$m - xdata.M.3_no_error$Gamma_mean)/sd(xdata.M.3_no_error$m)
+
 
 
 Bdata_index_s <- list(
@@ -1003,21 +1002,7 @@ compare(Effect_size_fixed_s,Effect_size_fixed_id_s,Effect_size_varying_intercept
 traceplot(Effect_size_fixed_id)
 ```
 
-```{r eval=FALSE, message=FALSE, echo=FALSE,warning=FALSE}
-B_model_result <- precis(Effect_size_fixed_s,prob = 0.95)
 
-A_pred <- link( Effect_size_fixed_s , data=data.frame(A=seq(0,1,0.05),MD=0,D=0,R=0,GF=0) )
-A_pred.mean <- apply( A_pred , 2 , mean )
-A_pred.PI <- apply( A_pred , 2 , PI , prob=0.95 )
-boxplot(rep(as.numeric(as.character(Simplest_case$Diff_s)),Simplest_case$Freq),
-      rep(as.numeric(as.character(Plot_model$Diff_s[Plot_model$Combination=='Simple_D_Sim_HES_0_P'])),Plot_model$Freq[Plot_model$Combination=='Simple_D_Sim_HES_0_P']), 
-      col=col.alpha(rangi2,0.5),ylim=c(-0.5,0.5) )
-# plot the MAP line, aka the mean mu for each weight
-lines( seq(1,2,0.05) , A_pred.mean,add=T )
-# plot a shaded region for 89% PI
-shade(A_pred.PI ,seq(1,2,0.05),add=T)
-
-```
 
 ```{r  message=FALSE, echo=FALSE,warning=FALSE, cache=T}
 B_model_result <- precis(Effect_size_fixed_s,prob = 0.95)
@@ -1098,7 +1083,26 @@ demography and admixture model are 10 \% or less of the true mean
 admixture time. The major uncertainties in the admixture time estimate arise from assuming a constant recombination rate. The admixture time estimates for a pulse or a multi-generation admixture are simillarly effected by the other modeling parameters.
 
 
-```{r fig3,message=FALSE, echo=FALSE,warning=FALSE,fig3.pos="H",fig.width=9,fig.height=6,fig.cap="\\label{fig:fig3} Comparison of the standardized difference between true and estimated admixture time for each parameter and the standard model of 100 replications each. Dotted line represents the model prediction with the 5.5 % and 94.5 % compatibility intervals solid lines. Dotted horizontal line indicates unbiased admixture estimates."}
+
+```{r fig3,message=FALSE, echo=FALSE,warning=FALSE,fig3.pos="H",fig.width=9,fig.height=6,fig.cap="\\label{fig:fig3} Comparison between the effect sizes of the estimated parameters on the standardized difference between true and estimated admixture time"}
+Plot_model_result <- precis(Effect_size_fixed_s,pars = c("a","bG","bR","bD","bm","bA"),prob = 0.95)
+
+ggplot(Plot_model_result,aes(y=as.character(row.names(Plot_model_result)),x=as.numeric(as.character(mean))))+
+      geom_point(aes(size=1.5,col=c(cbPalette_viridis[1],cbPalette_viridis[6],cbPalette_viridis[1],cbPalette_viridis[1],cbPalette_viridis[1],cbPalette_viridis[1])),show.legend = F)+
+    geom_errorbar(aes(ymin=as.character(row.names(Plot_model_result)),ymax=as.character(row.names(Plot_model_result))),width=c( abs(as.numeric(as.character(Plot_model_result$`97.5%`))-as.numeric(as.character(Plot_model_result$`2.5%`)))),col="black")+
+  geom_vline(xintercept = 0,linetype=2,aes(colour='grey'))+
+  labs(x = "Standardized difference between true and estimated time")+
+  labs(y = "")+
+  theme(plot.title = element_text(hjust = 0.5,size = 12))+
+  scale_y_discrete(labels= c("Standart Model","HES","Complex Demography","Continuous GF","d0 = 0.05","Recombination Map"))+
+  scale_color_manual("Gene Flow Model",
+                     values = c(cbPalette_viridis[1],cbPalette_viridis[6],
+                                cbPalette_viridis[1],cbPalette_viridis[1],cbPalette_viridis[1],cbPalette_viridis[1]),
+                     label=c("Pulse","Continuous"))
+
+```
+
+```{r eval=FALSE, message=FALSE, echo=FALSE,warning=FALSE}
 
 
 
@@ -1197,109 +1201,6 @@ annotate_figure(Fig_3,bottom = text_grob("Predictor combination"),left  = text_g
 
 ```
 
-```{r eval=FALSE,,message=FALSE, echo=FALSE,warning=FALSE}
-
-
-
-
-#### Ploting the model ####S
-
-
-Plot_Fig_2_X <- function(Null_Case,Predictore_case,B_Model,Int,Pred_data,Slope,x.lable,x.title,xlab=NULL,ylab=NULL,y.ticks=F){
-  Factor_pred <- link( Effect_size_fixed_s , data=data.frame(A=Pred_data[1],MD=Pred_data[2],D=Pred_data[3],R=Pred_data[4],GF=Pred_data[5]) )
-  Factor_pred.mean <- apply( Factor_pred , 2 , mean )
-  Factor_pred.PI <- apply( A_pred , 2 , PI , prob=0.95 )
-  pred_Data <- data.frame(x=seq(0,1,0.05),y=Factor_pred.mean)
-  Data=rbind(Null_Case,Predictore_case)
-  if(y.ticks==F){
-    Px <-  ggplot(Data,aes(x=as.character(Combination),y=as.numeric(as.character(Diff_s)),colour=Col))+
-      geom_point(aes(size = Freq),show.legend = F)+
-      geom_boxplot(show.legend = F)+
-      geom_abline(data=pred_Data,aes(x=x,y=y),linetype=2)+
-      #geom_abline(seq(1,2,0.05) , Factor_pred.PI[,1])+
-      #geom_abline(seq(1,2,0.05) , Factor_pred.PI[,2])+
-      geom_abline(intercept = 0,slope = 0,linetype=2,aes(colour='grey'))+
-      labs(x = xlab)+
-      labs(y = ylab)+
-      scale_x_discrete(labels= x.lable)+
-      theme(axis.text.x = element_text(angle = 0,size = 12),
-            axis.text.y=element_blank(),
-            axis.ticks.y =element_blank())+
-      coord_cartesian(ylim = c(-2,1), expand = 0)+
-      ggtitle(x.title)+
-      theme(plot.title = element_text(hjust = 0.5,size = 12))+
-      scale_color_manual("Gene Flow Model",
-                         values = c(cbPalette_viridis[1],cbPalette_viridis[6]),
-                         labels = c("Pulse","Continuous"))
-  }
-  
-  if(y.ticks==T){
-    Px <-  ggplot(Data,aes(x=as.character(Combination),y=as.numeric(as.character(Diff_s)),colour=Col))+
-      geom_point(aes(size = Freq),show.legend = F)+
-      geom_boxplot(show.legend = F)+
-      geom_line(data=pred_Data,aes(x=pred_Data[,1],y=pred_Data[,2]),linetype=2)+
-      #geom_abline(seq(1,2,0.05) , Factor_pred.PI[,1])+
-      #geom_abline(seq(1,2,0.05) , Factor_pred.PI[,2])+
-      geom_abline(intercept = 0,slope = 0,linetype=2,aes(colour='grey'))+
-      labs(x = xlab)+
-      #labs(y = "Standardized difference \nbetween true and estimated time")+
-      scale_x_discrete(labels= x.lable)+
-      theme(axis.text.x = element_text(angle = 0,size = 12),
-            axis.title.y=element_blank())+
-      coord_cartesian(ylim = c(-2,1), expand = 0)+
-      ggtitle(x.title)+
-      theme(plot.title = element_text(hjust = 0.5,size = 12))+
-      scale_color_manual("Gene Flow Model",
-                         values = c(cbPalette_viridis[1],cbPalette_viridis[6]),
-                         labels = c("Pulse","Continuous"))
-  }
-
-  return(Px)
-  
-}
-
-### Execute plot functions ###
-
-Plot_model <- data.frame(table(Diff_s=round(xdata.M.3_no_error$Diff_s,digits = 2),GF=xdata.M.3_no_error$GF,Asc=xdata.M.3_no_error$Ascertainment,d0=xdata.M.3_no_error$min_dist,True_GF=xdata.M.3_no_error$mean.t.GF,Demo=xdata.M.3_no_error$Demography,Recomb=xdata.M.3_no_error$Recomb.rate,Combination=xdata.M.3_no_error$TID))
-Plot_model <- subset(Plot_model,Freq>0)
-
-
-
-Plot_model$Col <- ifelse(Plot_model$GF=='0_Pulse','#56B4E9','#D55E00')
-Simplest_case= Plot_model[Plot_model$Combination=='Simple_D_Sim_LES_0_P',]
-Simplest_case$Combination <- paste(0,Simplest_case$Combination,sep = '_')
-
-
-PX1 <- Plot_Fig_2_X(Simplest_case,Plot_model[Plot_model$Combination=='Simple_D_Sim_HES_0_P',],B_model_result,c(seq(0,1,0.05),0,0,0,0),Int = 1,Slope = 6
-             ,x.lable = c("LES","HES"),"Ascertainment\nScheme",y.ticks = T)
-
-PX2 <- Plot_Fig_2_X(Simplest_case,Plot_model[Plot_model$Combination=='Simple_D_Sim_LES_1_P',],B_model_result,Int = 1,Slope = 5,x.lable = c("d0 = 0.02","d0 = 0.05"),"Minimal Distance\n")
-
-PX3 <- Plot_Fig_2_X(Simplest_case,Plot_model[Plot_model$Combination=='Inferred_D_Sim_LES_0_P',],B_model_result,Int = 1,Slope = 4,
-             x.lable = c("Simple","Complex"),"Demography\n")
-
-PX4 <- Plot_Fig_2_X(Null_Case = Simplest_case,Predictore_case = Plot_model[Plot_model$Combination=='Recom_D_Sim_LES_0_P',],B_model_result,Int = 1,Slope = 3,x.lable = c("Constant","Variable"),"Recombination Map\n")
-
-PX5 <- Plot_Fig_2_X(Simplest_case,Plot_model[Plot_model$Combination=='Simple_D_Sim_LES_0_C',],B_model_result,Int = 1,Slope = 2,x.lable = c("Pulse","Continous"),"Gene Flow\n")
-
-
-
-#Fig_3 <- ggarrange(                                               # second row with boxplot
-#      ggarrange(im_B, NULL, ncol = 2),       # Second row with pgn and NULL
-#        ggarrange(PX1,PX2,PX3,PX4,PX5,
-#          ncol = 5, nrow = 1),
-#          nrow = 2, 
-#          labels = c("A","B")                                      # Labels of the boxplot
-#          )
-#annotate_figure(Fig_3,bottom = text_grob("Predictor combination"))
-
-Fig_3 <-  ggarrange(PX1,PX2,PX3,PX4,PX5,
-          ncol = 5, nrow = 1)
-annotate_figure(Fig_3,bottom = text_grob("Predictor combination"),left  = text_grob("Standardized difference between true and estimated time",rot = 90))
-       
-
-```
-
 \subsection{Estimating the Lomax-parameters under different conditions}\label{estimating the Lomax-parameters under different conditions}
 
 ```{r message=FALSE, echo=FALSE,warning=FALSE}
@@ -1347,12 +1248,13 @@ Result.Table.fn <- function(Result.Table.path,Sampling.time.from.GF.End,name){
   Result.Table$Sample_Time <- Sampling.time.from.GF.End
   Result.Table$True_GF_length <- Result.Table$GF.End-Result.Table$GF.Start
   Result.Table$True_mean_GF <- ((Result.Table$GF.End+Result.Table$GF.Start)/2)-(Result.Table$GF.Start-Result.Table$Sample_Time)
+  Result.Table$True_gamma_mean_GF <- Get_gamma_mean(Result.Table$GF.Start,Result.Table$GF.End)
   Result.Table$mean_GF_exp <- 1/Result.Table$s.exp
   Result.Table$mean_GF_lomax_s <- 1/Result.Table$s.lomax
   Result.Table.comparison <- True_params(Result.Table)
   Result.Table$True_W <- Result.Table.comparison$V1
   Result.Table$True_S <- Result.Table.comparison$V2
-  Result.Table.comparison$length_GF <- (sqrt(Result.Table$mean_GF_lomax_s/(((1/Result.Table$w.lomax)+1)*Result.Table$s.lomax)))*4
+  Result.Table.comparison$length_GF <- (sqrt(Result.Table$mean_GF_lomax_s/(((1/Result.Table$w.lomax+1))*Result.Table$s.lomax)))*4
   Result.Table$length_GF <- Result.Table.comparison$length_GF
   
   return(Result.Table)
@@ -1362,14 +1264,14 @@ Plot_sampling_50_gen_t_GF <- function(ggdata_t.GF,cbPalette_viridis,Ptitle){
   ggplot(ggdata_t.GF,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
     geom_boxplot(show.legend = T)+
     facet_grid(~as.factor(True_GF_length),switch = "x")+
-    geom_hline( aes(yintercept = True_mean_GF ))+
+    geom_hline( aes(yintercept = True_gamma_mean_GF ))+
     ggtitle(Ptitle) +
     labs(x = "Admixture Duration")+
     labs(y = "Estimated Admixture Time")+
     theme(
       axis.text.x=element_blank(),
       axis.ticks.x=element_blank())+
-    coord_cartesian(ylim = c(0,1000), expand = 0)+
+    coord_cartesian(ylim = c(0,1500), expand = 0)+
     scale_color_manual("Simulations",
                        values = c(cbPalette_viridis[1],cbPalette_viridis[2],cbPalette_viridis[3],cbPalette_viridis[4]),
                        labels = c("Constant Recombination","HapMap AAMap corrected","HapMap HapMap corrected","HapMap not corrected"))
@@ -1397,7 +1299,7 @@ Plot_sampling_varying_gen_t_GF <- function(ggdata_t.GF_varying,cbPalette_viridis
   ggplot(ggdata_t.GF_varying,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
     geom_boxplot()+
     facet_grid(~as.factor(Sample_Time),switch = "x")+
-    geom_hline( aes(yintercept = True_mean_GF ))+
+    geom_hline( aes(yintercept = True_gamma_mean_GF ))+
     ggtitle(Ptitle) +
     labs(x = "Generations Sampled After End of Admixture")+
     labs(y = "Estimated Admixture Time")+
@@ -1419,7 +1321,7 @@ Plot_sampling_varying_gen_GF_Length <- function(ggdata_l.GF_varying,cbPalette_vi
     geom_hline( aes(yintercept = True_GF_length ))+
     ggtitle(Ptitle) +
     labs(x = "Generations Sampled After End of Admixture")+
-    labs(y = "Estimated Gene Flow Length")+
+    labs(y = "Estimated Admixture Duration")+
     theme(
       axis.text.x=element_blank(),
       axis.ticks.x=element_blank())+
@@ -1457,9 +1359,9 @@ Plot.data_50<-rbind(
   Recent_50_HapMap_HapMap_correction <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction,50,'Recent_50_HapMap_HapMap_correction')
 )
 
-ggdata_t.GF_50_mean_GF_exp <- melt(Plot.data_50,measure.vars =  c('mean_GF_exp'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-ggdata_t.GF_50_mean_GF_lomax <- melt(Plot.data_50,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-ggdata_l.GF_50 <- melt(Plot.data_50,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name'))
+ggdata_t.GF_50_mean_GF_exp <- melt(Plot.data_50,measure.vars =  c('mean_GF_exp'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name'))
+ggdata_t.GF_50_mean_GF_lomax <- melt(Plot.data_50,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name'))
+ggdata_l.GF_50 <- melt(Plot.data_50,measure.vars =  c('length_GF'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name'))
 
 Plot.data_50_fixed_Lambda<-rbind(
   Recent_50_constant_fixed_Lambda<- Result.Table.fn(Result.Table.path_Recent_50_fixed_Lambda,50,'Recent_50_constant'),
@@ -1468,8 +1370,8 @@ Plot.data_50_fixed_Lambda<-rbind(
   Recent_50_HapMap_HapMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda,50,'Recent_50_HapMap_HapMap_correction')
 )
 
-ggdata_t.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-ggdata_l.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name'))
+ggdata_t.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name'))
+ggdata_l.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name'))
 
 Plot.data_varying<-rbind(
   Recent_varying_constant<- Result.Table.fn(Result.Table.path_Recent_Varying,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_constant'),
@@ -1478,9 +1380,9 @@ Plot.data_varying<-rbind(
   Recent_varying_HapMap_HapMap_correction <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_HapMap_correction')
 )
 
-ggdata_t.GF_varying_mean_GF_exp <- melt(Plot.data_varying,measure.vars =  c('mean_GF_exp'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-ggdata_t.GF_varying_mean_GF_lomax <- melt(Plot.data_varying,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-ggdata_l.GF_varying <- melt(Plot.data_varying,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
+ggdata_t.GF_varying_mean_GF_exp <- melt(Plot.data_varying,measure.vars =  c('mean_GF_exp'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name','Sample_Time'))
+ggdata_t.GF_varying_mean_GF_lomax <- melt(Plot.data_varying,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name','Sample_Time'))
+ggdata_l.GF_varying <- melt(Plot.data_varying,measure.vars =  c('length_GF'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name','Sample_Time'))
 
 Plot.data_varying_fixed_Lambda<-rbind(
   Recent_varying_constant_fixed_Lambda<- Result.Table.fn(Result.Table.path_Recent_Varying_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_constant'),
@@ -1489,8 +1391,8 @@ Plot.data_varying_fixed_Lambda<-rbind(
   Recent_varying_HapMap_HapMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_HapMap_correction')
 )
 
-ggdata_t.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-ggdata_l.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
+ggdata_t.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name','Sample_Time'))
+ggdata_l.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_gamma_mean_GF','True_GF_length','Name','Sample_Time'))
 
 
 New.P1_mean_GF_exp <- Plot_sampling_50_gen_t_GF(ggdata_t.GF_50_mean_GF_exp,cbPalette_viridis, "Sampled 50 Gen. From End Of Admixture")
@@ -1971,6 +1873,133 @@ ggarrange(Real_data_Plot_normal_2,Real_data_Plot_log,ncol = 2,nrow = 1,
 ```
 
 
+```{r fig6, message=FALSE, echo=FALSE,warning=FALSE,fig6.pos="H",fig.width=9,fig.height=6,fig.cap="\\label{fig:fig5} Different admixure duration models ranging from a one generation pulse tu 2500 generations for Neandertal admixture using directly infered introgressed segments from Skov et al. 2020"}
+### For the paper plot cutoff 0.05 - 0.5 cM
+lower_trunc= 0.05
+upper_trunc= 0.5
+m=0.02
+Ne=5000
+Fragments <- read.table("Real_Data_Analysis/Archaicfragments_Iceland.txt",header = T)
+
+Recomb_Map <- read.table("Real_Data_Analysis/RecombmapIceland.txt", header = T)
+
+Fragments_Filtered <- Fragments[Fragments$archaic=="Vindija" | Fragments$archaic=="Altai",]
+
+Assign_Genetic_distance_linear_fn <- function(Recomb_Map,Fragments){
+  Fragments_cM <- c()
+  for(chr in 1:23){
+    if(chr==23){
+      chr="X"
+    }
+    else{
+      chr=chr
+    }
+    Recomb_Map_chr <- Recomb_Map[Recomb_Map$Chr==paste("chr",chr,sep=""),]
+    Fragments_chr <- Fragments[Fragments$chrom==chr,]
+    Start_Arch_Freg <- approx(x=Recomb_Map_chr$Begin, y=Recomb_Map_chr$cM, xout=Fragments_chr$start,method = "linear")
+    Stop_Arch_Freg <- approx(x=Recomb_Map_chr$Begin, y=Recomb_Map_chr$cM, xout=Fragments_chr$end,method = "linear")
+    Chr_x <- data.frame(chr=chr,Start_cM=Start_Arch_Freg$y,End_cM=Stop_Arch_Freg$y,length_bp=Fragments_chr$length,called=Fragments_chr$called)
+    Fragments_cM <- rbind(Fragments_cM,Chr_x)
+  }
+  Fragments_cM_clean <- Fragments_cM[complete.cases(Fragments_cM$Start_cM),]
+  Fragments_cM_clean <- Fragments_cM_clean[complete.cases(Fragments_cM_clean$End_cM),]
+  Fragments_cM_clean$length_cM <- Fragments_cM_clean$End_cM - Fragments_cM_clean$Start_cM
+  return(Fragments_cM_clean)
+  
+}
+
+Fragments_cM=Assign_Genetic_distance_linear_fn(Recomb_Map, Fragments_Filtered)
+
+
+fit_exp_optim_rep=function(Fragments,lower_trunc,upper_trunc,m,Ne){
+  l=Fragments[Fragments>=lower_trunc & Fragments<=upper_trunc]
+  n = rep(1, length(l))
+  
+  
+  dtexp <- function(x, rate=1, lower_trunc, upper_trunc,m,Ne){
+    dexp(x, rate, log=T) - logspace.sub(pexp(lower_trunc, rate, lower=F, log=T),pexp(upper_trunc, rate, lower=F, log=T))
+  }
+
+  
+  try({
+    f = function(par) -sum(n * dtexp(l, exp(par[1]), lower_trunc=lower_trunc,upper_trunc = upper_trunc))
+    res = optim(c(-1), f, method="L-BFGS-B")
+    par =exp(res$par)
+    t_m = (par*100)/(1-m)
+    t_m_cor_Inb = log(1-((par*100)/(2*Ne*(1-m))))*-2*Ne
+    return(data.frame(rate=par, ll_exp = -res$value, t_m= t_m ,t_m_cor_Inb = t_m_cor_Inb))
+  }, silent=F)
+  return(data.frame(rate=NA, ll_exp=NA, t_m= NA ,t_m_cor_Inb = NA))
+}
+
+dtexp <- function(x, rate=1, lower_trunc, upper_trunc,m,Ne){
+  dexp(x, rate, log=T) - logspace.sub(pexp(lower_trunc, rate, lower=F, log=T),pexp(upper_trunc, rate, lower=F, log=T))
+}
+
+fit_lomax_optim_rep=function(Fragments,fixed_shape,lower_trunc,upper_trunc){
+  l=Fragments[Fragments>=lower_trunc & Fragments<=upper_trunc]
+  n = rep(1, length(l))
+  
+  
+  #' truncated lomax density
+  dtlomax <- function(x, scale, shape, lower_trunc, upper_trunc){
+    VGAM::dlomax(x, scale=scale, shape=shape, log=T) - 
+      logspace.sub(VGAM::plomax(lower_trunc, scale=scale, shape=shape, lower=F, log=T),VGAM::plomax(upper_trunc, scale=scale, shape=shape, lower=F, log=T))
+  }
+  
+  
+  try({
+    f = function(par)-sum(n * dtlomax(l, scale=exp(par[1]), shape=fixed_shape, lower_trunc=lower_trunc,upper_trunc=upper_trunc))
+    res = optim(c(-1), f, method="L-BFGS-B")
+    pars = exp(res$par)
+    return(data.frame(scale=pars,t_m=fixed_shape/pars,tm_exp=(fixed_shape/pars)*100, ll_lomax = -res$value,lower_trunc=lower_trunc,upper_trunc=upper_trunc))
+  }, silent=F)
+  return(data.frame(scale=NA, t_m=NA,tm_exp=NA,ll_lomax=NA))
+}
+
+dtlomax <- function(x, scale, shape, lower_trunc, upper_trunc){
+  VGAM::dlomax(x, scale=scale, shape=shape, log=T) - 
+    logspace.sub(VGAM::plomax(lower_trunc, scale=scale, shape=shape, lower=F, log=T),VGAM::plomax(upper_trunc, scale=scale, shape=shape, lower=F, log=T))
+}
+
+Expo_est=fit_exp_optim_rep(Fragments = Fragments_cM$length_cM,lower_trunc = lower_trunc,upper_trunc = upper_trunc,m = m,Ne = Ne)
+
+t_d=c(1,100,200,400,800,1000,1500,2000,2500)
+T_lomax_est <- c()
+for(t in 1:length(t_d)){
+  fixed_shape= (Expo_est$t_m_cor_Inb^2)/((t_d[t]/4)^2)
+  Res_Segments_optim_lomax=fit_lomax_optim_rep(Fragments_cM$length_cM,fixed_shape,lower_trunc,upper_trunc)
+  Res_Segments_optim_lomax$fixed_shape <- fixed_shape  
+  T_lomax_est <- rbind(T_lomax_est,Res_Segments_optim_lomax)
+}
+T_lomax_est$duration <- t_d
+l=Fragments_cM$length_cM[Fragments_cM$length_cM>=lower_trunc & Fragments_cM$length_cM<=upper_trunc]
+Plot_Fragments <- hist(l,plot = F,breaks = 1000)
+Plot_Fragments <- data.frame(mids=Plot_Fragments$mids,density=Plot_Fragments$density)
+Expo_fit=data.frame(y=dtexp(Plot_Fragments$mids,Expo_est$rate,lower_trunc ,upper_trunc),x=Plot_Fragments$mids)
+Lomax_fit <- c()
+for(i in 1:length(T_lomax_est$scale)){
+  Lomax_fit_i=data.frame(y=dtlomax(x = Plot_Fragments$mids,scale = T_lomax_est[i,1],shape = T_lomax_est[i,7],lower_trunc = lower_trunc,upper_trunc = upper_trunc)
+                         ,x=Plot_Fragments$mids)
+  Lomax_fit <- rbind(Lomax_fit,Lomax_fit_i)
+}
+
+Icelandic_Fit_Results=rbind(Expo_fit,Lomax_fit)
+Icelandic_Fit_Results$Duration <- as.factor(rep(c(0,t_d),each=length(Expo_fit$x)))
+
+
+ggplot(data=Icelandic_Fit_Results,aes(x = , y = y,color=Duration,fill=Duration))+
+  geom_point(data=Plot_Fragments,aes(x=mids,y=log(density),color=NULL,fill=NULL),show.legend = F)+
+  geom_line(data=Icelandic_Fit_Results,aes(x = x, y = y,color=Duration))+
+  scale_color_manual("Admixture Duration",
+                     values = c(c(cbPalette_viridis[1],cbPalette_viridis)),
+                     labels = c(c("Pulse",c(0,t_d))))+
+  scale_fill_manual( values = c(c(cbPalette_viridis[1],cbPalette_viridis)))+
+  labs(x = "Genetic distance (cM)")+
+  labs(y = "density") 
+```
+
+
 \section{Discussion}\label{discussion}
 
 Archaeological evidence suggests that Neandertals and modern human populations overlapped in some regions for
@@ -2014,6 +2043,12 @@ im_B
 
 ```{r figS2, message=FALSE, echo=FALSE,warning=FALSE,fig.width=12,fig.height=6,fig.cap="\\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = pulse/continuous, with 100 relicates respectively. Dotted line represents the model prediction with the 5.5 % and 94.5 % compatibility intervals solid lines. Dotted horizontal line indicates no difference between ture and estimated time. "}
 
+Plot_model <- data.frame(table(Diff_s=round(xdata.M.3_no_error$Diff_s,digits = 2),GF=xdata.M.3_no_error$GF,Asc=xdata.M.3_no_error$Ascertainment,d0=xdata.M.3_no_error$min_dist,True_GF=xdata.M.3_no_error$mean.t.GF,Demo=xdata.M.3_no_error$Demography,Recomb=xdata.M.3_no_error$Recomb.rate,Combination=xdata.M.3_no_error$TID))
+Plot_model <- subset(Plot_model,Freq>0)
+
+
+
+Plot_model$Col <- ifelse(Plot_model$GF=='0_Pulse','#56B4E9','#D55E00')
 
 
 
