Skov publications included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1581,3 +1581,43 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	pages = {419--424},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/YGUBCLW7/Lazaridis et al. - 2016 - Genomic insights into the origin of farming in the.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7LV2HC93/nature19310.html:text/html}
 }
+
+
+@article{skov_nature_2020,
+	title = {The nature of {Neanderthal} introgression revealed by 27,566 {Icelandic} genomes},
+	volume = {582},
+	copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2225-9},
+	doi = {10.1038/s41586-020-2225-9},
+	abstract = {Human evolutionary history is rich with the interbreeding of divergent populations. Most humans outside of Africa trace about 2\% of their genomes to admixture from Neanderthals, which occurred 50–60 thousand years ago1. Here we examine the effect of this event using 14.4 million putative archaic chromosome fragments that were detected in fully phased whole-genome sequences from 27,566 Icelanders, corresponding to a range of 56,388–112,709 unique archaic fragments that cover 38.0–48.2\% of the callable genome. On the basis of the similarity with known archaic genomes, we assign 84.5\% of fragments to an Altai or Vindija Neanderthal origin and 3.3\% to Denisovan origin; 12.2\% of fragments are of unknown origin. We find that Icelanders have more Denisovan-like fragments than expected through incomplete lineage sorting. This is best explained by Denisovan gene flow, either into ancestors of the introgressing Neanderthals or directly into humans. A within-individual, paired comparison of archaic fragments with syntenic non-archaic fragments revealed that, although the overall rate of mutation was similar in humans and Neanderthals during the 500 thousand years that their lineages were separate, there were differences in the relative frequencies of mutation types—perhaps due to different generation intervals for males and females. Finally, we assessed 271 phenotypes, report 5 associations driven by variants in archaic fragments and show that the majority of previously reported associations are better explained by non-archaic variants.},
+	language = {en},
+	number = {7810},
+	urldate = {2020-07-28},
+	journal = {Nature},
+	author = {Skov, Laurits and Coll Macià, Moisès and Sveinbjörnsson, Garðar and Mafessoni, Fabrizio and Lucotte, Elise A. and Einarsdóttir, Margret S. and Jonsson, Hakon and Halldorsson, Bjarni and Gudbjartsson, Daniel F. and Helgason, Agnar and Schierup, Mikkel Heide and Stefansson, Kari},
+	month = jun,
+	year = {2020},
+	pages = {78--83},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/I6W8RGKE/Skov et al. - 2020 - The nature of Neanderthal introgression revealed b.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/QKFLJ3Z4/s41586-020-2225-9.html:text/html}
+}
+
+
+@article{skov_detecting_2018,
+	title = {Detecting archaic introgression using an unadmixed outgroup},
+	volume = {14},
+	issn = {1553-7404},
+	url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007641},
+	doi = {10.1371/journal.pgen.1007641},
+	abstract = {Human populations outside of Africa have experienced at least two bouts of introgression from archaic humans, from Neanderthals and Denisovans. In Papuans there is prior evidence of both these introgressions. Here we present a new approach to detect segments of individual genomes of archaic origin without using an archaic reference genome. The approach is based on a hidden Markov model that identifies genomic regions with a high density of single nucleotide variants (SNVs) not seen in unadmixed populations. We show using simulations that this provides a powerful approach to identifying segments of archaic introgression with a low rate of false detection, given data from a suitable outgroup population is available, without the archaic introgression but containing a majority of the variation that arose since initial separation from the archaic lineage. Furthermore our approach is able to infer admixture proportions and the times both of admixture and of initial divergence between the human and archaic populations. We apply the model to detect archaic introgression in 89 Papuans and show how the identified segments can be assigned to likely Neanderthal or Denisovan origin. We report more Denisovan admixture than previous studies and find a shift in size distribution of fragments of Neanderthal and Denisovan origin that is compatible with a difference in admixture time. Furthermore, we identify small amounts of Denisova ancestry in South East Asians and South Asians.},
+	language = {en},
+	number = {9},
+	urldate = {2020-01-24},
+	journal = {PLOS Genetics},
+	author = {Skov, Laurits and Hui, Ruoyun and Shchur, Vladimir and Hobolth, Asger and Scally, Aylwyn and Schierup, Mikkel Heide and Durbin, Richard},
+	month = sep,
+	year = {2018},
+	keywords = {Neanderthals, Haplotypes, Simulation and modeling, Genomics, Hidden Markov models, Comparative genomics, Introgression, Population density},
+	pages = {e1007641},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/X2M5EFBY/Skov et al. - 2018 - Detecting archaic introgression using an unadmixed.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/T6C2AIHQ/article.html:text/html}
+}
